2006-08-03 Mateusz Loskot <mateusz@loskot.net>

	* tests/unit/geos_unit.cpp: fixed Bug #90

2006-07-26 Sandro Santilli <strk@refractions.net>

	* capi/Makefile.am: forced link of geostest against stdc++ lib
	* tests/xmltester/XMLTester.cpp: added <cmath>
	  include (for fabs use)
	* source/headers/geos/geom/BinaryOp.h:
	  Added geometry snapping heuristic

2006-07-25 Sandro Santilli <strk@refractions.net>

	* autogen.sh: make failures more visible

2006-07-21 Mateusz Loskot <mateusz@loskot.net>

	* source/headers/geos/geom.h,
	source/headers/geos/io.h: Wrapped FIXME message with
	#warning directive to shout about potential headers
	removal in future.


2006-07-21 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/precision/GeometrySnapper.h,
	  source/headers/geos/precision/LineStringSnapper.h,
	  source/headers/geos/precision/Makefile.am,
	  source/precision/GeometrySnapper.cpp,
	  source/precision/LineStringSnapper.cpp,
	  source/precision/Makefile.am,
	  tests/unit/Makefile.am,
	  tests/unit/precision/LineStringSnapperTest.cpp:
	  Added new precision::LineStringSnapper class + tests
	  and precision::GeometrySnapper + tests
	* source/headers/geos/geom/CoordinateList.h: added operator<<
	* tests/unit/geom/LineSegmentTest.cpp: added another distance() test
	* source/headers/geos/geom/CoordinateList.h,
	  source/headers/geos/geom/Makefile.am, tests/unit/Makefile.am,
	  tests/unit/geom/CoordinateListTest.cpp:
	  CoordinateList class re-introduced, for list-based ops
	  (not strictly mapped to JTS version, not yet at least)

2006-07-13 Charlie Savage <cfis@savagexi.com>

	* swig: Finished porting SWIG bindings to use the C API.
	* swig: Added SWIG back into the GEOS build system.  To build
	  either the Ruby or Python bindings:
	  
	      ./configure --enable-python --enable-ruby
	      
	* automake: Updated EXTRA_DIST to include most SWIG files.
	  Still have to add generated .cxx and .py files.